Update image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
 
                 <div class="card_one_service">
                     <h1 class="titulo_cards">Creación de Contenido Digital</h1>
-                    <img class="tapa" src="./img/tapja.png" alt="icon">
+                    <img class="tapa" src="../img/tapja.png" alt="icon">
 
                     <div class="card_interna_one">
 
@@ -1018,7 +1018,7 @@
 
                 <div class="card_one_service">
                     <h1 class="titulo_cards">Social Media Manager para tu Negocio</h1>
-                    <img class="tapa" src="./img/tapja.png" alt="icon">
+                    <img class="tapa" src="../img/tapja.png" alt="icon">
 
                     <div class="card_interna_one">
 
@@ -1060,7 +1060,7 @@
 
                 <div class="card_one_service">
                     <h1 class="titulo_cards">Diseño de Sitios Web Profesionales</h1>
-                    <img class="tapa" src="./img/tapja.png" alt="icon">
+                    <img class="tapa" src="../img/tapja.png" alt="icon">
 
                     <div class="card_interna_one">
 
@@ -1102,7 +1102,7 @@
 
                 <div class="card_one_service">
                     <h1 class="titulo_cards">Funnel de Ventas Inteligente para tu Negocio</h1>
-                    <img class="tapa" src="./img/tapja.png" alt="icon">
+                    <img class="tapa" src="../img/tapja.png" alt="icon">
 
                     <div class="card_interna_one">
 
