Update image paths and price formats in index.html

--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
 
                 <div class="card_one_service">
                     <h1 class="titulo_cards">Creación de Contenido Digital</h1>
-                    <img class="tapa" src="../img/tapja.png" alt="icon">
+                    <img class="tapa" src="./img/tapja.png" alt="icon">
 
                     <div class="card_interna_one">
 
@@ -1005,7 +1005,7 @@
 
                     <h2 class="desde"> Precio: Desde</h2>
                     <h3 class="precio_biggers">
-                        $150.000 COP
+                        150.000 COP
                     </h3>
 
 
@@ -1018,7 +1018,7 @@
 
                 <div class="card_one_service">
                     <h1 class="titulo_cards">Social Media Manager para tu Negocio</h1>
-                    <img class="tapa" src="../img/tapja.png" alt="icon">
+                    <img class="tapa" src="./img/tapja.png" alt="icon">
 
                     <div class="card_interna_one">
 
@@ -1048,7 +1048,7 @@
 
                     <h2 class="desde"> Precio: Desde</h2>
                     <h3 class="precio_biggers">
-                        $250.000 COP
+                        250.000 COP
                     </h3>
 
 
@@ -1060,7 +1060,7 @@
 
                 <div class="card_one_service">
                     <h1 class="titulo_cards">Diseño de Sitios Web Profesionales</h1>
-                    <img class="tapa" src="../img/tapja.png" alt="icon">
+                    <img class="tapa" src="./img/tapja.png" alt="icon">
 
                     <div class="card_interna_one">
 
@@ -1090,7 +1090,7 @@
 
                     <h2 class="desde"> Precio: Desde</h2>
                     <h3 class="precio_biggers">
-                        col 450.000
+                       450.000 COP
                     </h3>
 
 
@@ -1102,7 +1102,7 @@
 
                 <div class="card_one_service">
                     <h1 class="titulo_cards">Funnel de Ventas Inteligente para tu Negocio</h1>
-                    <img class="tapa" src="../img/tapja.png" alt="icon">
+                    <img class="tapa" src="./img/tapja.png" alt="icon">
 
                     <div class="card_interna_one">
 
@@ -1130,7 +1130,7 @@
 
                     <h2 class="desde"> Precio: Desde</h2>
                     <h3 class="precio_biggers">
-                        col 350.000
+                        350.000 COP
                     </h3>
 
 
